prevent zoom on mobile, carret try fix

--- a/assets/style/app.styl
+++ b/assets/style/app.styl
@@ -203,6 +203,7 @@
     /* Hack to hide the real caret */
     font-weight: 400;
     font-size: 12px;
+    caret-color: transparent;
 
     @media (min-width: 800px) {
       font-size: 16px;
